--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,6 @@
     <div class="navbar">
       <div class="navbar-inner">
 
-          <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-          <!--<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>-->
-
           <!-- Be sure to leave the brand out there if you want it shown -->
           <a class="brand" href="/">NoMorePasswordsJustEmail<span class="visible-phone" style="line-height:25%;font-size:80%;"><br/>
             <small style="margin-left:2em;"><em>passwords suckity suck suck suck</em></small></span></a>
@@ -45,7 +38,7 @@
 
           {{> about}}
 
-          {{> statements}}
+          {{> comments}}
 
         </div>
 
@@ -69,7 +62,6 @@
   </div>
 </body>
 
-
 <!-- if not logged in, show this menu -->
   <template name="enter_email">
     <form id="enter-email-form" class="form-inline" role="form">
@@ -82,11 +74,7 @@
 <!-- if we have the email address, but not yet the security code -->
   <template name="enter_security_code">
     <form id="enter-security-code-form" class="form-inline" role="form">
-        {{#if session "known"}}
-          <label>Security code:</label>
-        {{else}}
-          <label>Security code:</label>
-        {{/if}}
+        <label>Security code:</label>
         <input type="text" class="span4 input-small" id="enter-security-code" placeholder="see {{session "email"}}">
         <button type="submit" class="btn btn-primary">
           {{#if session "known"}}
@@ -106,46 +94,4 @@
     <p>User ID: <strong>{{email}}</strong> &nbsp; &nbsp;
        <button id="logout-btn" type="button" class="btn btn-mini btn-danger">Logout</button>
     </p>
-  </template>
-
-<!-- show people's status who have looked at this page -->
-  <template name="statements">
-    <p>put recent statements here</p>
-  </template>
-
-<!-- about this project -->
-  <template name="about">
-    <div class="well well-small" id="what-is-it">
-      <h4><a href="#">What is NoMorePasswordsJustEmail?</a></h4>
-      <p>Passwords are annoying. They're hard to create and hard to remember. When we forget them (as
-         we all do) we have reset codes sent to our email addresses, which we assume is secure.
-         So, if we ultimately rely on the "security" of email anyway, why not just do away with
-         passwords altogether and just use email?</p>
-      <p>This site is a proof of concept of the no-password, idea. In this case, you login or
-         register with your email address, then enter a time-limited random security code that
-         is sent to that email address. The browser will remember that you're logged in for a long
-         while, so you won't need to go through this process very often.</p>
-      <p>Not much else about this site is interesting. It's just enough to test whether this
-         passwordless approach is workable. For more a lot more discussion about his and other
-         no-password schemes, see the <a href="https://github.com/BrentNoorda/NoMorePasswordsJustEmail" target="_blank">NoMorePasswordsJustEmail
-         project on GitHub</a>.
-    </div>
-  </template>
-
-<!-- google ads stuff -->
-<!-- http://stackoverflow.com/questions/14389766/meteor-js-use-external-script -->
-  <template name="adsRight">
-    <div id="adsRight">
-      <iframe src="/adright.html?v={{{unique}}}" seamless width="160" height="600" scrolling="no"
-       frameborder="0" marginheight="0" marginwidth="0"
-       style="margin:0;padding:0;border:none;width:160px;height:600px"></iframe>
-    </div>
-  </template>
-  <template name="adsBottom">
-    <div id="adsBottom">
-      <hr/>
-      <iframe src="/adbottom.html?v={{{unique}}}" seamless width="336" height="280" scrolling="no"
-       frameborder="0" marginheight="0" marginwidth="0"
-       style="margin:0;padding:0;border:none;width:336px;height:280px"></iframe>
-    </div>
   </template>
