point to better readme

--- a/client/about/about.html
+++ b/client/about/about.html
@@ -11,8 +11,8 @@
          is sent to that email address. The browser will remember that you're logged in for a long
          while, so you won't need to go through this process very often.</p>
       <p>Not much else about this site is interesting. It's just enough to test whether this
-         passwordless approach is workable. For more a lot more discussion about his and other
-         no-password schemes, see the <a href="https://github.com/BrentNoorda/NoMorePasswordsJustEmail" target="_blank">NoMorePasswordsJustEmail
-         project on GitHub</a>.
+         passwordless approach is workable. For more a lot more discussion about this and other
+         no-password schemes, see the <a href="https://github.com/BrentNoorda/NoMorePasswordsJustEmail/blob/master/README.md" target="_blank">NoMorePasswordsJustEmail
+         on GitHub</a>.
     </div>
   </template>
