enable google webmaster tools

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <head>
   <title>NoMorePasswordsJustEmail, because passwords suckity suck suck suck</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="qD_ZXbaICmLKUo027desse22C0EoW9DXxedgg8Gsgkw" />
 </head>
 
 <body>
