Lots of documentation and cleanup

--- a/client/about/about.html
+++ b/client/about/about.html
@@ -2,17 +2,20 @@
   <template name="about">
     <div class="well well-small" id="what-is-it">
       <h4><a href="#"><span class="hidden-phone">What is </span>NoMorePasswordsJustEmail?</a></h4>
-      <p>Passwords are annoying. They're hard to create and hard to remember. When we forget them (as
-         we all do) we have reset codes sent to our email addresses, which we assume is secure.
-         So, if we ultimately rely on the "security" of email anyway, why not just do away with
-         passwords altogether and just use email?</p>
-      <p>This site is a proof of concept of the no-password idea. In this case, you login or
+      <p>Passwords suck. Good, strong passwords are difficult to think up,
+         difficult to type,
+         and difficult to remember--but all too easy to crack.
+         When you forget your password (as we all do), there's the sucky "email me instructions to
+         change my password" and then you have to go through that difficult password creation all over again.
+         Multiply these difficulties by every service you use (you <i>better not</i> be reusing passwords), and there's
+         just no denying it: passwords suck!</p>
+      <p><b>This site is a no-password proof of concept.</b> In this case, you login or
          register with your email address, then enter a time-limited random security code that
-         is sent to that email address. The browser will remember that you're logged in for a long
-         while, so you won't need to go through this process very often.</p>
-      <p>Not much else about this site is interesting. It's just enough to test whether this
-         passwordless approach is workable. For more a lot more discussion about his and other
-         no-password schemes, see the <a href="https://github.com/BrentNoorda/NoMorePasswordsJustEmail" target="_blank">NoMorePasswordsJustEmail
-         project on GitHub</a>.
+         is sent to that email address. (In most cases you won't need to do this often, because
+         the browser will remember that you're logged in unless you explicitly "logout".)</p>
+      <p>There's not much else to talk about here, folks. Mostly the password POC. For more a lot more discussion about this and other
+         no-password schemes, see <a href="https://github.com/BrentNoorda/NoMorePasswordsJustEmail/blob/master/README.md" target="_blank">NoMorePasswordsJustEmail
+         on GitHub</a>.
+      <p style="text-align:right;font-size:80%;">- <a href="http://www.brent-noorda.com/">Brent Noorda</a></p>
     </div>
   </template>
