--- a/client/about/about.html
+++ b/client/about/about.html
@@ -13,7 +13,7 @@
          register with your email address, then enter a time-limited random security code that
          is sent to that email address. (In most cases you won't need to do this often, because
          the browser will remember that you're logged in unless you explicitly "logout".)</p>
-      <p>There's not much else to talk about here, folks. Mostly the password POC. For more a lot more discussion about this and other
+      <p>There's not much else to talk about here, folks. Mostly the password POC. For more discussion about this and other
          no-password schemes, see <a href="https://github.com/BrentNoorda/NoMorePasswordsJustEmail/blob/master/README.md" target="_blank">NoMorePasswordsJustEmail
          on GitHub</a>.
       <p style="text-align:right;font-size:80%;">- <a href="http://www.brent-noorda.com/">Brent Noorda</a></p>
