all use of http instead of forcing https

--- a/client/about/about.html
+++ b/client/about/about.html
@@ -7,6 +7,8 @@
          and difficult to remember--but all too easy to crack.
          When you forget your password (as we all do), there's the sucky "email me instructions to
          change my password" and then you have to go through that difficult password creation all over again.
+         If you're on an insecure computer, with malware sniffing your client-side keystrokes or other data,
+         then "all your password are belong to us."
          Multiply these difficulties by every service you use (you <i>better not</i> be reusing passwords), and there's
          just no denying it: passwords suck!</p>
       <p><b>This site is a no-password proof of concept.</b> In this case, you login or
