--- a/client/about/about.html
+++ b/client/about/about.html
@@ -1,7 +1,7 @@
 <!-- about this project -->
   <template name="about">
     <div class="well well-small" id="what-is-it">
-      <h4><a href="#"><span class="hidden-phone">What is </span>NoMorePasswordsJustEmail?</a></h4>
+      <h4><a href="#"><span class="hidden-phone">What is </span>NoMorePasswordsJustEmail?<span style="font-size:60%" class="hidden-phone"> tell me more...</span></a></h4>
       <p>Passwords suck. Good, strong passwords are difficult to think up,
          difficult to type,
          and difficult to remember--but all too easy to crack.
